# Aletheia-V3

./: .gitignore  CLAUDE.md  CONCEPT.md  CONTEXT.md  NATS_TOPICS.md  PROMPTING.md  README.md  docker-compose.yml  handoff-lobe-frontal-tui.md  nats_sender.py
.github/workflows/: ci.yml
docs/adr/: 0001-embedded-tui-in-lobe-frontal.md  0002-lobe-frontal-stays-llama-cpp-only.md
docs/agents/: triage-labels.md
services/benchmark/: README.md  main.py  requirements.txt
services/benchmark/graphs/: E2E.json  T2T.json
services/benchmark/tests/: test_benchmark.py
services/cortex/: Cargo.toml  README.md
services/cortex/src/: main.rs
services/hippocampe/: MEMORY.md  PERSONA.md  README.md  alembic.ini  database.py  docker-compose.yml  export_data.py  import_data.py  main.py  rag_manager.py  requirements.txt
services/hippocampe/migrations/: env.py
services/hippocampe/tests/: test_hippocampe.py
services/io_discord/: README.md  bot.py  config.py  presence.py  requirements.txt  voice.py
services/io_discord/cogs/: bets.py  presence.py  text.py  voice.py
services/io_oreilles/: Cargo.toml  README.md  main.py  requirements.txt
services/io_oreilles/src/: discord_audio.rs  main.rs  segmenter.rs
services/io_text/: README.md  main.py
services/io_visage/: README.md
services/io_voix/: README.md  audio.py  main.py  requirements.txt
services/io_yeux/: README.md
services/limbic/: README.md  boredom.py  main.py  mood.py  requirements.txt
services/lobe_frontal/: Persona.md  README.md  main.py  requirements.txt  test.xml  tui.py
services/terminal/: README.md
(+22 files in other folders)
