[package]
name = "io_oreilles"
version = "0.1.0"
edition = "2024"

[dependencies]
ct2rs = { version = "0.9.18", default-features = false, features = ["whisper", "openblas"] }
tokio = { version = "1.37", features = ["full"] }
async-nats = "0.34"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
cpal = "0.15"
ringbuf = "0.3.3"
rubato = "0.15.0"
silero = { version = "0.2.0", features = ["bundled"] }
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"] }
base64 = "0.22"